--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -79,23 +79,36 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 
 [sentences in bracket are key ideas]
 
-[Morality is the central of human social life]. People make substantial amount of moral judgment in everyday life [e.g., @hofmann_morality_2014]. When making these judgments, people not only judge others behavior but, more importantly, others' character [@uhlmann_person-centered_2015]. That is, moral judgment is a way that we get information about other in the society, so that we can distinguish the good from the bad. This align with studies of person-perception in which moral character is a basic dimension of person perception in social life[@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006].
+[Morality is the central of human social life, formed the fabric of social behavior]. People make substantial amount of moral judgments in everyday life [e.g., @hofmann_morality_2014]. When making these judgments, people not only judge others behavior but, more importantly, others' character [@uhlmann_person-centered_2015]. That is, moral judgment is a way that we get information about moral character of others, so that we can distinguish the good from the bad. This person-centered approach to moral judgment aligns with studies of person-perception in which moral character is a basic dimension of person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006] and the most important aspect to evaluate the continuity of identity [@strohminger_true_2017], suggested the center role of moral character in social life.
 
-## Morality as social categorization 
+The importance of moral character shaped individuals' cognition. To successfully navigate in a social world, a person needs to both accurately evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. The former has been extensively studied in person perception and recently also attracted much attention in moral psychology, while the latter was usually studied separately as as moral self concept [@monin_dynamic_2009] or self-perception []. Only recently, investigators started to explore the role of perceiver's self-relevance in moral judgment [e.g., @waytz_whistleblowers_2013]. To date, few studies addressed (1) the perceptual process of moral character related information and (2) the relationship between perceiving moral character of self and other. Drawing on social categorization theory [@turner_self_1994; @turner_rediscovering_1987], we unify the perceptual process of moral character of self and other, and propose that the categorization of moral character is based on the core self: good-self.
 
-[@mchugh_moral_2019]: Moral judgment as categorization (MJAC);
-person-centered moral judgment
-person-perception
+As for the former question, abundant of evidence revealed that people weigh morality heavily in evaluating others [@goodwin_moral_2015] and evaluating the change of identity of others [@strohminger_true_2017]. These findings suggest that morality has been internalized standard for how people perceiving and remembering other people. 
 
-People attribute the punishment to moral character instead of environmental factors [@dunlea_childrens_2020].
+When it comes to self perception, there is accumulating evidence that people actively maintain a good moral-self image. For example, recent research found that self-enhancement effect is stronger than that in competence or sociability [@tappin_illusion_2017]. Also, participants maintain their moral self-image even after their own unethical behaviors (e.g., cheating)[@monin_dynamic_2009]. Similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things [@klein_maybe_2016]. In other words, existing evidence supported the notion that morality is important in person perception and self-concept, people are motivated to maintain a good moral-self image.
 
-## Self as an object of moral categorization: I am a good person
-Social life: treat people the same way as we expect people to treat yourself.
-a person needs to both accurately evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person.
-Motivation to maintain good-self
 
-## From good me to good us: Spontaneous good-self referential in moral categorization
-Integrate self-categorization in moral judgment: an implicit good-me/good-we assumption (Role of self in attractor model)
+## Moral judgment as a social categorization process
+
+[Moral judgment is a process of categorization] Morality is thought as a evolved system that makes the social life possible, promote the cooperation between strangers. As complex as morality is, one major function is the help people avoid potential free-riders [] or other norm-violators that might cause problem in the community [rejected by the community]. From this perspective, morality served as a standard for people to judge whether someone is belong to a category that accepted by the society (not bad) or not. Recent theories in moral psychology also started to recognized the importance of person as the unit of analysis [@uhlmann_person-centered_2015]. For example, @mchugh_moral_2019 proposed that moral judgment is a way to categorization (MJAC), which depends on context and goal of the agent who making the judgment. Recent findings also revealed that people tend to attribute the punishment to moral character instead of environmental factors [@dunlea_childrens_2020], and that moral character interact with moral judgment [].
+
+[role of self of the "judge" in moral judgment] However, it's largely ignored why people need to categorize other as the good and the bad. Most studies in moral judgment implicitly assumed that perceivers of moral behaviors, who then makes moral judgment about these behaviors, are neutral parties, viewing others' moral behaviors from "bird-view". This "asocial perceiver" approach [e.g., @hester_moral_2020] ignored the fact that people who make the judgment themselves has their own motivations, goals, and preferences. More importantly, more judgment in everyday life may link to action (punishment). Indeed, when people categorized people based on moral standard, they do so based on representations of other's belief, intention, and knowledge, and how these representation related to one's own belief, intention, and knowledge, i.e., self-relevance. This effect is exemplified by the fact that people may prefer immoral character if they are more self-like [@krause_can_2020]. Other studies also revealed that when the victim or the agent is an in-group of the perceivers of the moral event, the moral judgment becomes different []. Numerous events revealed that when the agent or victim are perceived self-irrelevant, people pay less attention and have weak emotion responses [e.g., @reicher_perception_2016]. These studies suggested that morality is not merely a categorization, but a social categorization that closely related to the self. 
+
+[Morality is social categorization: categorize self-other] Based on these studies, we propose that moral judgment as a social categorization, i.e., judge whether others are ingroup, the good as an extension of self, or outgroup, the bad are distinct from the self. That is, the moral good is "us", is the in-group. A essentially similar but different perspective had been proposed by @descioli_side-taking_2016, who suggested that making moral judgment is side-taking. In this sense, by making moral judgment, people know who is us, who is them.
+
+Note that, just as other social identity may conflict, categorizing based on morality may also conflict with other identity (e.g., in a same company), which lead to difficult for participants and different response across participants [@waytz_whistleblowers_2013]
+
+## Self as the object of moral categorization: I am a good person
+Just the role of self-relatedness of the perceiver can be easily ignored by moral psychologists, the moral character of self can also easily be ignored in daily life. Yet when asked to evaluate themselves, participants usually showed a pattern that can be seen in other domain of evaluation: positive self-bias. Only that the positive self-bais is stronger in moral character than in other domain. This is consistent with the importance of moral character in social life: people needs to behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. All these suggest that if morality is a categorization, people will categorize themselves as moral good. 
+
+There is accumulating evidence that people actively maintain a good moral-self image. For example, recent research found that self-enhancement effect is stronger than that in competence or sociability [@tappin_illusion_2017]. Also, participants maintain their moral self-image even after their own unethical behaviors (e.g., cheating)[@monin_dynamic_2009]. Similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things [@klein_maybe_2016]. In other words, existing evidence supported the notion that morality is important in person perception and self-concept, people are motivated to maintain a good moral-self image.
+
+This moral positive self-bias might be the results of unconscious memory system that favor positive moral behavior of self and amnesia of unethical behavior of others. This cognitive helps to maintain a identity that surrounded a core good-self.
+
+## From good me to good person: Spontaneous good-self referential in moral categorization
+If people view them self as morally good, and that moral character of others are categorized as good or bad, it's naturally that moral judgment is a grouping anchored at the core self. 
+
+Integrate self-categorization in moral judgment: an implicit good-me/good-person assumption (Role of self in attractor model)
 
 *self-categorization* and *variable self*
 
