--- a/endnote.bib
+++ b/endnote.bib
@@ -1060,6 +1060,21 @@ Publisher: American Psychological Association},
 	file = {Firestone and Scholl - 2015 - Enhanced visual awareness for morality and pajamas.pdf:/home/hcp4715/Zotero/storage/C2FS4XN4/Firestone and Scholl - 2015 - Enhanced visual awareness for morality and pajamas.pdf:application/pdf}
 }
 
+@book{turner_rediscovering_1987,
+	location = {Cambridge, {MA}, {US}},
+	title = {Rediscovering the social group:  A self-categorization theory},
+	isbn = {978-0-631-14806-7},
+	series = {Rediscovering the social group:  A self-categorization theory},
+	shorttitle = {Rediscovering the social group},
+	abstract = {This book presents a new theory of the social group which seeks to explain how individuals become unified into a group and capable of collective behaviour.  The book summarizes classic psychological theories of the group, describes and explains the important effects of group membership on social behaviour, outlines self-categorization theory in full and shows how the general perspective has been applied in research on group formation and cohesion, social influence, the polarization of social attitudes, crowd psychology and social stereotyping. The theory emerges as a fundamental new contribution to social psychology. ({PsycINFO} Database Record (c) 2016 {APA}, all rights reserved)},
+	pagetotal = {x, 239},
+	publisher = {Basil Blackwell},
+	author = {Turner, John C. and Hogg, Michael A. and Oakes, Penelope J. and Reicher, Stephen D. and Wetherell, Margaret S.},
+	date = {1987},
+	note = {Pages: x, 239},
+	keywords = {Social Identity, Social Groups, Social Psychology, Social Behavior, Collective Behavior, Group Cohesion, Social Influences},
+	file = {Turner et al. - 1987 - Rediscovering the social group  A self-categoriza.pdf:/home/hcp4715/Zotero/storage/PP3HTTXZ/Turner et al. - 1987 - Rediscovering the social group  A self-categoriza.pdf:application/pdf}
+}
 
 @article{turner_self_1994,
 	title = {Self and Collective: Cognition and Social Context},
@@ -1125,4 +1140,63 @@ Publisher: American Psychological Association},
 	date = {2020-03-01},
 	langid = {english},
 	keywords = {Explanation, Incarceration, Morality, Punishment, Social cognitive development}
+}
+
+
+@article{hester_moral_2020,
+	title = {The Moral Psychology of Raceless, Genderless Strangers},
+	volume = {15},
+	issn = {1745-6916},
+	url = {https://doi.org/10.1177/1745691619885840},
+	doi = {10.1177/1745691619885840},
+	abstract = {Moral psychology uses tightly controlled scenarios in which the identities of the characters are either unspecified or vague. Studies with raceless, genderless strangers help to highlight the important structural elements of moral acts (e.g., intention, causation, harm) but may not generalize to real-world judgments. As researchers have long shown, social judgments hinge on the identities (e.g., race, gender, age, religion, group affiliation) of both target and perceiver. Asking whether people generally condemn “shooting someone” is very different from asking whether liberals as opposed to conservatives condemn “a White police officer shooting a Black suspect.” We argue for the importance of incorporating identity into moral psychology. We briefly outline the central role of identity in social judgments before reviewing current theories in moral psychology. We then advocate an expanded person-centered morality—synthesizing moral psychology with social cognition—to better capture everyday moral judgments.},
+	pages = {216--230},
+	number = {2},
+	journaltitle = {Perspectives on Psychological Science},
+	shortjournal = {Perspect Psychol Sci},
+	author = {Hester, Neil and Gray, Kurt},
+	urldate = {2020-09-09},
+	date = {2020-03-01},
+	langid = {english},
+	note = {Publisher: {SAGE} Publications Inc},
+	file = {Hester and Gray - 2020 - The Moral Psychology of Raceless, Genderless Stran.pdf:/home/hcp4715/Zotero/storage/C9P3CCAV/Hester and Gray - 2020 - The Moral Psychology of Raceless, Genderless Stran.pdf:application/pdf}
+}
+
+
+@article{krause_can_2020,
+	title = {Can Bad Be Good? The Attraction of a Darker Self},
+	volume = {31},
+	issn = {0956-7976},
+	url = {https://doi.org/10.1177/0956797620909742},
+	doi = {10.1177/0956797620909742},
+	shorttitle = {Can Bad Be Good?},
+	abstract = {To avoid threats to the self, people shun comparisons with similar—yet immoral, mentally unstable, or otherwise negatively viewed—others. Despite this prevalent perspective, we consider a contrarian question: Can people be attracted to darker versions of themselves? We propose that with self-threat assuaged, similarity signals self-relevance, which draws people toward those who are similar to them despite negative characteristics. To test this general idea, we explored a prevalent context that may offer a safe haven from self-threat: stories. Using a large-scale proprietary data set from a company with over 232,000 registered users, we demonstrated that people have a preference for villains—unambiguously negative individuals—who are similar to themselves, which suggests that people are attracted to such comparisons in everyday life. Five subsequent lab experiments (N = 1,685) demonstrated when and why similarity results in attraction toward—rather than repulsion from—negative others.},
+	pages = {518--530},
+	number = {5},
+	journaltitle = {Psychological Science},
+	shortjournal = {Psychol Sci},
+	author = {Krause, Rebecca J. and Rucker, Derek D.},
+	urldate = {2020-10-28},
+	date = {2020-05-01},
+	langid = {english},
+	note = {Publisher: {SAGE} Publications Inc}
+}
+
+
+@article{waytz_whistleblowers_2013,
+	title = {The whistleblower's dilemma and the fairness–loyalty tradeoff},
+	volume = {49},
+	issn = {00221031},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0022103113001352},
+	doi = {10.1016/j.jesp.2013.07.002},
+	abstract = {Whistleblowing – reporting another person's unethical behavior to a third party – often constitutes a conﬂict between competing moral concerns. Whistleblowing promotes justice and fairness but can also appear disloyal. Five studies demonstrate that a fairness–loyalty tradeoff predicts people's willingness to blow the whistle. Study 1 demonstrates that individual differences in valuing fairness over loyalty predict willingness to report unethical behavior. Studies 2a and 2b demonstrate that experimentally manipulating endorsement of fairness versus loyalty increases willingness to report unethical behavior. Study 3 demonstrates that people recall their decisions to report unethical behavior as driven by valuation of fairness, whereas people recall decisions not to report unethical behavior as driven by valuation of loyalty. Study 4 demonstrates that experimentally manipulating the endorsement of fairness versus loyalty increases whistleblowing in an online marketplace. These ﬁndings reveal the psychological determinants of whistleblowing and shed light on factors that encourage or discourage this practice.},
+	pages = {1027--1033},
+	number = {6},
+	journaltitle = {Journal of Experimental Social Psychology},
+	shortjournal = {Journal of Experimental Social Psychology},
+	author = {Waytz, Adam and Dungan, James and Young, Liane},
+	urldate = {2020-10-29},
+	date = {2013-11},
+	langid = {english},
+	file = {Waytz et al. - 2013 - The whistleblower's dilemma and the fairness–loyal.pdf:/home/hcp4715/Zotero/storage/FQJ5LYHX/Waytz et al. - 2013 - The whistleblower's dilemma and the fairness–loyal.pdf:application/pdf}
 }
