--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -79,48 +79,49 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 
 [sentences in bracket are key ideas]
 
-[Morality is the central of human social life, formed the fabric of social behavior]. People make substantial amount of moral judgments in everyday life [e.g., @hofmann_morality_2014]. When making these judgments, people not only judge others behavior but, more importantly, others' character [@uhlmann_person-centered_2015]. That is, moral judgment is a way that we get information about moral character of others, so that we can distinguish the good from the bad. This person-centered approach to moral judgment aligns with studies of person-perception in which moral character is a basic dimension of person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006] and the most important aspect to evaluate the continuity of identity [@strohminger_true_2017], suggested the center role of moral character in social life.
+[Morality is the central of human social life]. People make substantial amount of moral judgments in everyday life [e.g., @hofmann_morality_2014]. When making these judgments, people not only judge others behavior but, more importantly, others' character [@uhlmann_person-centered_2015]. That is, moral judgment is a way we assess the moral character of others, so that we can distinguish the good from the bad. Similarly, moral character is a basic dimension of person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006] and the most important aspect to evaluate the continuity of identity [@strohminger_true_2017]. The importance of moral character in moral judgment and person perception suggested that morality has a strong influence on our cognition.
 
-The importance of moral character shaped individuals' cognition. To successfully navigate in a social world, a person needs to both accurately evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. The former has been extensively studied in person perception and recently also attracted much attention in moral psychology, while the latter was usually studied separately as as moral self concept [@monin_dynamic_2009] or self-perception []. Only recently, investigators started to explore the role of perceiver's self-relevance in moral judgment [e.g., @waytz_whistleblowers_2013]. To date, few studies addressed (1) the perceptual process of moral character related information and (2) the relationship between perceiving moral character of self and other. Drawing on social categorization theory [@turner_self_1994; @turner_rediscovering_1987], we unify the perceptual process of moral character of self and other, and propose that the categorization of moral character is based on the core self: good-self.
-
-As for the former question, abundant of evidence revealed that people weigh morality heavily in evaluating others [@goodwin_moral_2015] and evaluating the change of identity of others [@strohminger_true_2017]. These findings suggest that morality has been internalized standard for how people perceiving and remembering other people. 
-
-When it comes to self perception, there is accumulating evidence that people actively maintain a good moral-self image. For example, recent research found that self-enhancement effect is stronger than that in competence or sociability [@tappin_illusion_2017]. Also, participants maintain their moral self-image even after their own unethical behaviors (e.g., cheating)[@monin_dynamic_2009]. Similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things [@klein_maybe_2016]. In other words, existing evidence supported the notion that morality is important in person perception and self-concept, people are motivated to maintain a good moral-self image.
-
+Given the importance of moral character, to successfully navigate in a social world, a person needs to both accurately evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. The former has been extensively studied in person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006] and recently also attracted much attention in moral psychology [@uhlmann_person-centered_2015], while the latter was usually studied separately as as moral self concept [@monin_dynamic_2009; @strohminger_true_2017] or self-perception [@klein_maybe_2016; @tappin_illusion_2017]. Only recently, investigators started to explore the role of perceiver's self-relevance in moral judgment [e.g., @waytz_whistleblowers_2013]. To date, few studies addressed (1) the perceptual process of moral character and (2) the relationship between perceiving moral character of self and other. We explore the perceptual process of moral character of self and other by using associative learning task and propose that the results can be explained by social-categorization theory[@turner_self_1994; @turner_rediscovering_1987]. That is, people had a moral character-based categorization which is based on the core self: good-self.
 
 ## Moral judgment as a social categorization process
 
-[Moral judgment is a process of categorization] Morality is thought as a evolved system that makes the social life possible, promote the cooperation between strangers. As complex as morality is, one major function is the help people avoid potential free-riders [] or other norm-violators that might cause problem in the community [rejected by the community]. From this perspective, morality served as a standard for people to judge whether someone is belong to a category that accepted by the society (not bad) or not. Recent theories in moral psychology also started to recognized the importance of person as the unit of analysis [@uhlmann_person-centered_2015]. For example, @mchugh_moral_2019 proposed that moral judgment is a way to categorization (MJAC), which depends on context and goal of the agent who making the judgment. Recent findings also revealed that people tend to attribute the punishment to moral character instead of environmental factors [@dunlea_childrens_2020], and that moral character interact with moral judgment [].
+[Moral judgment is a process of categorization] Morality is thought as a evolved system that makes the social life possible, promote the cooperation between strangers. As complex as morality is, one major function is to help people avoid potential free-riders [] or other norm-violators that might cause problem in the community [rejected by the community]. From this perspective, morality served as a standard for people to judge whether someone belongs to a social group that adhere the social norm and is a cooperator in social life. Recent theories in moral psychology also started to recognized the importance of person as the unit of analysis [@uhlmann_person-centered_2015]. For example, @mchugh_moral_2019 proposed that moral judgment is a way to categorization (MJAC), which depends on context and goal of the agent who making the judgment. Recent findings also revealed that people tend to attribute the punishment to moral character instead of environmental factors [@dunlea_childrens_2020], and that moral character interact with moral judgment [].
 
-[role of self of the "judge" in moral judgment] However, it's largely ignored why people need to categorize other as the good and the bad. Most studies in moral judgment implicitly assumed that perceivers of moral behaviors, who then makes moral judgment about these behaviors, are neutral parties, viewing others' moral behaviors from "bird-view". This "asocial perceiver" approach [e.g., @hester_moral_2020] ignored the fact that people who make the judgment themselves has their own motivations, goals, and preferences. More importantly, more judgment in everyday life may link to action (punishment). Indeed, when people categorized people based on moral standard, they do so based on representations of other's belief, intention, and knowledge, and how these representation related to one's own belief, intention, and knowledge, i.e., self-relevance. This effect is exemplified by the fact that people may prefer immoral character if they are more self-like [@krause_can_2020]. Other studies also revealed that when the victim or the agent is an in-group of the perceivers of the moral event, the moral judgment becomes different []. Numerous events revealed that when the agent or victim are perceived self-irrelevant, people pay less attention and have weak emotion responses [e.g., @reicher_perception_2016]. These studies suggested that morality is not merely a categorization, but a social categorization that closely related to the self. 
+[role of self of the "judge" in moral judgment] However, why people need to categorize other as the good and the bad had not been explicitly studied. Most studies in moral judgment implicitly assumed that perceivers of moral behaviors, who then makes moral judgment about these behaviors, are neutral parties, viewing others' moral behaviors from "bird-view". This "asocial perceiver" approach [e.g., @hester_moral_2020] ignored the fact that people who make the judgment themselves has their own motivations, goals, and preferences. In reality, when people categorized people based on moral standard, they do so based on representations of the consequences of the behavior, actor's belief, intention, and knowledge [], and, more importantly, how these representations related to oneself or one's ingroup. That is, self-relevance is crucial in making moral judgment. This is exactly social categorization theory had tried to account. When some unethical things happen, people may had no emotional response or even pay attention to response if they categorize the actor or the victim are not relevant to themselves [e.g., @reicher_perception_2016]. Other studies also suggested that when the victim or the agent is an in-group of the perceivers of the moral event, the moral judgment becomes different []. In the same vein, when moral character don't bring damage to onself, people may prefer immoral character because those bad characters are more self-like [@krause_can_2020]. These studies suggested that morality is not merely a categorization, but a social categorization that based on self-relevance. 
 
-[Morality is social categorization: categorize self-other] Based on these studies, we propose that moral judgment as a social categorization, i.e., judge whether others are ingroup, the good as an extension of self, or outgroup, the bad are distinct from the self. That is, the moral good is "us", is the in-group. A essentially similar but different perspective had been proposed by @descioli_side-taking_2016, who suggested that making moral judgment is side-taking. In this sense, by making moral judgment, people know who is us, who is them.
+[Morality is social categorization: categorize self-other] Therefore, we propose that moral judgment as a social categorization, i.e., judge whether others are ingroup, the good as an extension of self; and outgroup, the bad are distinct from the self. A essentially similar but different perspective had been proposed by @descioli_side-taking_2016, who suggested that making moral judgment is side-taking. In this sense, by judging who is moral, people know who is us, who is them.
 
-Note that, just as other social identity may conflict, categorizing based on morality may also conflict with other identity (e.g., in a same company), which lead to difficult for participants and different response across participants [@waytz_whistleblowers_2013]
+Note that, multiple social identity may conflict, morality-based categorization may also conflict with other identity (e.g., in a same company), which lead to difficult for participants and different response across participants [@waytz_whistleblowers_2013]
 
-## Self as the object of moral categorization: I am a good person
-Just the role of self-relatedness of the perceiver can be easily ignored by moral psychologists, the moral character of self can also easily be ignored in daily life. Yet when asked to evaluate themselves, participants usually showed a pattern that can be seen in other domain of evaluation: positive self-bias. Only that the positive self-bais is stronger in moral character than in other domain. This is consistent with the importance of moral character in social life: people needs to behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. All these suggest that if morality is a categorization, people will categorize themselves as moral good. 
+## Self as the object of moral categorization: Good-self is true-self
+Just the role of self-relevance of the perceiver/judge was largely ignored by moral psychologists, the moral character of self is also largely ignored by both researchers and lay person. However, When asked to evaluate themselves, participants usually showed a pattern that can be seen in other domain of self-evaluation: positive self-bias. Only that the positive self-bias is stronger in moral character than in other domain [@tappin_illusion_2017]. This is consistent with the importance of moral character in social life: people needs to behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. 
 
-There is accumulating evidence that people actively maintain a good moral-self image. For example, recent research found that self-enhancement effect is stronger than that in competence or sociability [@tappin_illusion_2017]. Also, participants maintain their moral self-image even after their own unethical behaviors (e.g., cheating)[@monin_dynamic_2009]. Similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things [@klein_maybe_2016]. In other words, existing evidence supported the notion that morality is important in person perception and self-concept, people are motivated to maintain a good moral-self image.
+There is accumulating evidence that people actively maintain a good moral-self image. For example, recent research found that self-enhancement effect is stronger than that in competence or sociability [@tappin_illusion_2017]. Also, participants maintain their moral self-image even after their own unethical behaviors (e.g., cheating)[@monin_dynamic_2009]. Similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things [@klein_maybe_2016]. In other words, existing evidence supported the notion when evaluating themselves, most people are motivated to maintain a good moral-self image.
+
+All these suggest that in the morality-based social-categorization, people will categorize themselves as morally good. Then comes the question: how people reconcile the contradicting information about themselves? For example the dishonest behavior and good-self image? One possibility is that one categorized self as multifacet and only one of these selves is the true self or authentic self, other aspects of self was "distorted" by environmental facts []. This view has a long history in self study, for example, the self-discrepancies in psychology suggested that ...the ideal self, ought self, and real self, and the true self is ... In other words, people can categorize self as the categorize others and regard only part of their behavior/character as the true self. 
+
+Recently studies suggested that the true self is a morally good self []. Not only people belief that true self is morally good but the true self for others share the same pattern []. That is, in social-categorization theory's term, self can be categorized as true-self vs. non-true self, and morally good self is true-self.
 
 This moral positive self-bias might be the results of unconscious memory system that favor positive moral behavior of self and amnesia of unethical behavior of others. This cognitive helps to maintain a identity that surrounded a core good-self.
 
 ## From good me to good person: Spontaneous good-self referential in moral categorization
+If people categorize both self and other based on morality and view the good character as true self for other self and others, then, what's the relationship between the self-categorization and other-categorization? Social categorization theory suggested that social-categorization is based on self, and ingroup is an extension of the self. Also, the identity is varying across different situation. Importantly, there should be no difference in cognitive process if two person/targets were categorized in the same group.  One interesting question is: which categorization standard is more important when there are multiple standards. There are two possibilities when both self and other are labeled by different moral character: (1) people cares more about good or bad, when the good is salient, people no longer care about the identity of the good because it's ingroup already; (2) people cares more about the true self.
+
 If people view them self as morally good, and that moral character of others are categorized as good or bad, it's naturally that moral judgment is a grouping anchored at the core self. 
 
 Integrate self-categorization in moral judgment: an implicit good-me/good-person assumption (Role of self in attractor model)
 
 *self-categorization* and *variable self*
 
-Given the importance of moral character, to successfully navigate in social world, a person needs to both accurately evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. The former was traditionally investigated as person perception in social psychology, while the latter was studied separately as moral self concept [@monin_dynamic_2009]. As for the former question, abundant of evidence revealed that people weigh morality heavily in evaluating others [@goodwin_moral_2015] and evaluating the change of identity of others [@strohminger_true_2017]. These findings suggest that morality has been internalized standard for how people perceiving and remembering other people. 
-
-When it comes to self perception, there is accumulating evidence that people actively maintain a good moral-self image. For example, recent research found that self-enhancement effect is stronger than that in competence or sociability [@tappin_illusion_2017]. Also, participants maintain their moral self-image even after their own unethical behaviors (e.g., cheating)[@monin_dynamic_2009]. Similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things [@klein_maybe_2016]. In other words, existing evidence supported the notion that morality is important in person perception and self-concept, people are motivated to maintain a good moral-self image.
+## Social-categorization and perception
 
 [whether moral character information influence perception?, link to exp1a, b, c, and exp2] However, as @freeman_dynamic_2011 put it, the focus of the studies in person perception and moral self-concept is not to explain the perceptual process, rather, they are explaining the higher-order social cognitive processes that come after. That is, current studies on person perception are perception without perceptual process. Without knowledge of perceptual processes, we can not have a full picture of how moral information is processed in our cognition. As an increasing attention is paid to perceptual process underlying social cognition, it's clear that perceptual processes are strongly influenced by social factors, such as group-categorization, stereotype [see @xiao_perceiving_2016;@stolier_functional_2016]. Given the importance of moral character and that moral character related information has strong influence on learning and memory [@stanley_moral_2019; @carlson_motivated_2020], one might expect that moral character related information could also play a role in perceptual process.
 
 [using associative learning task to study the moral character's influence on perception] Though theoretically possible, no empirical studies had directly addressed this issue. There were only a few studies about the temporal dynamics of judging the trustworthiness of face [e.g., @dzhelyova_temporal_2012], but trustworthy is not equal to morality. One difficulty of studying moral character's influence on perceptual decision-making is that moral character is a high-level and hidden state instead of observable feature. usually, one needs necessary information, e.g., behavior history, to infer moral character of a person. For example, @anderson_visual_2011 asked participant to first study the behavioral description of faces and then asked participant to perform a perceptual detection task. They assumed that by learning the behavioral description of a person (represented by a face), participants could acquire the moral related information about that face, and this association would then bias the perceptual processing of the faces (but see @stein_no_2017). However, one drawback of this approach is that participants may differ greatly when inferring the moral character of the person from behavioral descriptions, given that notion what is morality itself is varying across population [@henrich_weirdest_2010] and those descriptions and faces may themselves are idiosyncratic, therefore, introduced large variation in experimental design.
 
 An alternative is to use abstract semantic concepts to study how these concepts influence perception. Abstract concepts of moral character is part of our daily life and it can be used to represent rich information. These abstract concepts is part of a dynamic network in which sensory cue, concrete behaviors and other information can activate/inhibit each other (e.g., aggressiveness) [@freeman_dynamic_2011; @amodio_social_2019]. If a concept of moral character (e.g., good person) is activated, it should also be able to influence on the perceptual process of the visual cues through the dynamic network, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster [@gantman_moral_2014, but see @firestone_enhanced_2015]. If moral character is an important in person perception, then, just as those other information such as races, education, [see @xiao_perceiving_2016], moral character related information might change the perceptual processes.
+
+## The current study
 
 To investigate the above possibility, we used an associative learning paradigm to study how moral character concept change perceptual decision-making. In this paradigm, simple geometric shapes were paired with different words whose dominant use is to describe the moral character of person. Participants first learn the associations between shapes and words, i.e. triangle is a good-person, i.e., building direct association between high-level, hidden moral characters and visual cues. After remembered the associations, they perform a matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used in studying the perceptual process of self-concept, but had also proven useful in studying other concepts like social group [@enock_self_2018]. By using simple and morally neutral shapes, we controlled the variations caused by visual cues.
 
@@ -136,7 +137,7 @@ In exp 3a, 3b, and 6b, we found that (1) good-self is always faster than neutral
 
 [Good self in self-reported data] As an exploration, we also collected participants' self-reported psychological distance between self and good-person, bad-person, and neutral-person. We explored the general pattern and the correlation between self-reported distance and reaction-based indices.
 
-[whether categorize self as positive is not limited to morality] Finally, we explored the pattern is generalized to all positive traits or only to morality. We found that self-categorization is not limited to morality, even morality is central to social life. we used aesthetic aspect as another instance. 
+[whether categorize self as positive is not limited to morality] Finally, we explored the pattern is generalized to all positive traits or only to morality. We found that self-categorization is not limited to morality, but a special case of categorization in perpetual processing. 
 
 Key concepts and discussing points:
 *Self-categories* are cognitive groupings of self and some class of stimuli as identical or different from some other class. [Turner et al.]
